# self_stabilising_drone

./: .gitignore  CMakeLists.txt  README.md  controller.cpp  filter.cpp  filter.h  mixer.cpp  mixer.h  pid.cpp  pid.h  world.sdf
models/x500/: model.sdf
models/x500_base/: model.sdf
